[tool.poetry]
name = "hyx"
version = "0.0.1"
description = "Lightweight fault tolerance primitives for your modern Python microservices"
authors = ["Roman Glushko <roman.glushko.m@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
ruff = "^0.0.182"
black = "^22.12.0"
isort = "^5.11.2"
coverage = {extras = ["toml"], version = "^6.5.0"}
pytest-asyncio = "^0.20.3"

[project.urls]
Homepage = "https://github.com/roma-glushko/hyx"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
